# merger

./: .gitignore  Cargo.toml  LICENSE  Merger_2.0.2.py  README.md  build.rs
.github/workflows/: release.yml
Python Version/: Merger_before_piranha.py  merger.py  merger_after_piranha.py
Python Version/CameroonDB/: ENV_A_MERGER.mdb  ENV_A_MERGER.tsv  PFA_A_MERGER.mdb
Python Version/Merger_2.0.2.dist/pandas/_libs/: algos.pyd  arrays.pyd  byteswap.pyd  groupby.pyd  hashing.pyd  hashtable.pyd  index.pyd  indexing.pyd  internals.pyd  interval.pyd  join.pyd  json.pyd  lib.pyd  missing.pyd  ops.pyd  ops_dispatch.pyd  pandas_datetime.pyd  pandas_parser.pyd  parsers.pyd  properties.pyd  reshape.pyd  sas.pyd  sparse.pyd  tslib.pyd  writers.pyd
Python Version/Merger_2.0.2.dist/pandas/_libs/tslibs/: base.pyd  ccalendar.pyd  conversion.pyd  dtypes.pyd  fields.pyd  nattype.pyd  np_datetime.pyd  offsets.pyd  parsing.pyd  period.pyd  strptime.pyd  timedeltas.pyd  timestamps.pyd  timezones.pyd  tzconversion.pyd  vectorized.pyd
Python Version/Merger_2.0.2.dist/pandas/_libs/window/: aggregations.pyd  indexers.pyd
example_data/: DDNS_template_v2.csv  Example_EPIINFO_master.csv  isolate_template_v2.csv
misc/: nuitka.yml
rust_without_minknow/src/: main.rs
src/: csv.rs  main.rs  merge.rs  minknow.rs  plate_map.rs  template.rs  types.rs
src/handlers/: clear.rs  file.rs  mod.rs  plate_map.rs
ui/: app.slint
updateChecker/: Cargo.toml
updateChecker/src/: lib.rs
