[package]
name = "merger"
version = "1.0.0"
edition = "2021"

[dependencies]
slint = "1.8.0"
polars = { version = "0.44.2", features = ["lazy"] }
rfd = "0.14.1"
csv = "1.3.1"
dirs = "5.0.1"
regex = "1.11.1"
scraper = "0.17"
serde_json = "1.0"
caseless = "0.2"
update-checker = { package = "update-checker", path = "updateChecker", features = ["slint"] }

[build-dependencies]
winres = "0.1"
slint-build = "1.8.0"


