[package]
name = "update-checker"
version = "1.0.0"
edition = "2021"
description = "GitHub release update checker with ETag caching, prerelease support, and optional Slint UI helpers"

[features]
# show a Slint-based confirmation UI
slint = ["dep:slint", "open"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["clock"] }
directories = "5.0"
once_cell = "1.19"
open = { version = "5.3", optional = true }
slint = { version = "1.8", optional = true }